--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ h11{
 .tech .box-container{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 
     padding-right: 2rem;
